--- a/flex/interactive/examples/modern_graph/graph.yaml
+++ b/flex/interactive/examples/modern_graph/graph.yaml
@@ -25,28 +25,28 @@ schema:
             primitive_type: DT_SIGNED_INT32
       primary_keys:
         - id
-    - type_id: 1
-      type_name: software
-      description: A software vertex type
-      x_csr_params:
-        max_vertex_num: 100
-      properties:
-        - property_id: 0
-          property_name: id
-          property_type:
-            primitive_type: DT_SIGNED_INT64
-        - property_id: 1
-          property_name: name
-          property_type:
-            string:
-              long_text:
-        - property_id: 2
-          property_name: lang
-          property_type:
-            string:
-              long_text:
-      primary_keys:
-        - id
+    # - type_id: 1
+    #   type_name: software
+    #   description: A software vertex type
+    #   x_csr_params:
+    #     max_vertex_num: 100
+    #   properties:
+    #     - property_id: 0
+    #       property_name: id
+    #       property_type:
+    #         primitive_type: DT_SIGNED_INT64
+    #     - property_id: 1
+    #       property_name: name
+    #       property_type:
+    #         string:
+    #           long_text:
+    #     - property_id: 2
+    #       property_name: lang
+    #       property_type:
+    #         string:
+    #           long_text:
+    #   primary_keys:
+    #     - id
   edge_types:
     - type_id: 0
       type_name: knows
@@ -62,15 +62,15 @@ schema:
           property_name: weight
           property_type:
             primitive_type: DT_DOUBLE
-    - type_id: 1
-      type_name: created
-      description: A created edge type
-      vertex_type_pair_relations:
-        - source_vertex: person
-          destination_vertex: software
-          relation: MANY_TO_MANY
-      properties:
-        - property_id: 0
-          property_name: weight
-          property_type:
-            primitive_type: DT_DOUBLE
+    # - type_id: 1
+    #   type_name: created
+    #   description: A created edge type
+    #   vertex_type_pair_relations:
+    #     - source_vertex: person
+    #       destination_vertex: software
+    #       relation: MANY_TO_MANY
+    #   properties:
+    #     - property_id: 0
+    #       property_name: weight
+    #       property_type:
+    #         primitive_type: DT_DOUBLE
