support scan+limit fuse in interactive
Committed-by: xiaolei.zl from Dev container

--- a/flex/tests/hqps/interactive_config_test_cbo.yaml
+++ b/flex/tests/hqps/interactive_config_test_cbo.yaml
@@ -20,6 +20,9 @@ compiler:
       - NotMatchToAntiJoinRule
       - ExtendIntersectRule
       - ExpandGetVFusionRule
+      - ScanExpandFusionRule
+      - TopKPushDownRule
+      - ScanEarlyStopRule # This rule must be placed after TopKPushDownRule and ScanExpandFusionRule
   meta:
     reader:
       schema:
