todo: about how to deploy
Committed-by: xiaolei.zl from Dev container

--- a/flex/interactive/examples/email/import.yaml
+++ b/flex/interactive/examples/email/import.yaml
@@ -21,7 +21,7 @@ loading_config:
 vertex_mappings:
   - type_name: vertex  # must align with the schema
     inputs:
-      - vertices.csv
+      - vertex.csv
 edge_mappings:
   - type_triplet:
       edge: edge
