--- a/flex/bin/CMakeLists.txt
+++ b/flex/bin/CMakeLists.txt
@@ -1,13 +1,13 @@
 if(Hiactor_FOUND)
         add_executable(rt_server rt_server.cc)
-        target_link_libraries(rt_server flex_utils flex_rt_mutable_graph flex_graph_db flex_server)
+        target_link_libraries(rt_server flex_server)
         install_without_export_flex_target(rt_server)
 endif()
 
 if(Hiactor_FOUND)
         include_directories(../engines/http_server)
         add_executable(rt_bench rt_bench.cc)
-        target_link_libraries(rt_bench flex_utils flex_rt_mutable_graph flex_graph_db flex_server)
+        target_link_libraries(rt_bench flex_server)
         install_without_export_flex_target(rt_bench)
 endif()
 
@@ -17,7 +17,7 @@ install_without_export_flex_target(rt_admin)
 
 
 add_executable(adhoc_runner adhoc_runner.cc)
-target_link_libraries(adhoc_runner flex_utils flex_graph_db)
+target_link_libraries(adhoc_runner flex_graph_db)
 install_without_export_flex_target(adhoc_runner)
 
 add_executable(cypher_client cypher_client.cc)
@@ -31,7 +31,7 @@ install_without_export_flex_target(flex_analytical_engine)
 
 if(Hiactor_FOUND)
         add_executable(interactive_server interactive_server.cc)
-        target_link_libraries(interactive_server flex_utils flex_graph_db flex_server flex_plan_proto flex_utils ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES})
+        target_link_libraries(interactive_server flex_server ${GFLAGS_LIBRARIES})
         if (OPENTELEMETRY_CPP_FOUND)
                 target_link_libraries(interactive_server otel)
         endif()
@@ -43,9 +43,9 @@ install(PROGRAMS load_plan_and_gen.sh DESTINATION bin)
 
 include_directories(${Boost_INCLUDE_DIRS})
 add_executable(bulk_loader bulk_loader.cc)
-target_link_libraries(bulk_loader flex_rt_mutable_graph flex_utils ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(bulk_loader flex_rt_mutable_graph ${GFLAGS_LIBRARIES})
 install_without_export_flex_target(bulk_loader)
 
 add_executable(stored_procedure_runner stored_procedure_runner.cc)
-target_link_libraries(stored_procedure_runner flex_rt_mutable_graph flex_utils flex_graph_db ${GLOG_LIBRARIES} ${GFLAGS_LIBRARIES} ${Boost_LIBRARIES})
+target_link_libraries(stored_procedure_runner flex_graph_db ${GFLAGS_LIBRARIES})
 install_without_export_flex_target(stored_procedure_runner)
