--- a/flex/tests/rt_mutable_graph/CMakeLists.txt
+++ b/flex/tests/rt_mutable_graph/CMakeLists.txt
@@ -7,5 +7,5 @@ foreach(f ${GS_TEST_FILES})
         set(T_NAME ${CMAKE_MATCH_1})
         message(STATUS "Found rt_mutable_graph test - " ${T_NAME})
         add_executable(${T_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/${T_NAME}.cc)
-        target_link_libraries(${T_NAME}  flex_rt_mutable_graph flex_graph_db  ${GLOG_LIBRARIES} ${LIBGRAPELITE_LIBRARIES})
+        target_link_libraries(${T_NAME}  flex_graph_db)
 endforeach()
