ci: Fixing codeql test (#4441)
Fix #4440

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,7 +35,7 @@ jobs:
     #   - https://gh.io/supported-runners-and-hardware-resources
     #   - https://gh.io/using-larger-runners (GitHub.com only)
     # Consider using larger runners or machines with greater resources for possible analysis time improvements.
-    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
+    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-22.04' }}
     timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
     permissions:
       # required for all workflows
@@ -96,8 +96,7 @@ jobs:
       shell: bash
       run: |
         echo 'Install dependencies'
-        pip install gsctl
-        gsctl install-deps dev
+        python3 gsctl.py install-deps dev
         source ~/.graphscope_env
         echo 'Making GRAPE'
         cd analytical_engine
