remove auditwheel repairing when build coordinator image, and add interactive image nightly releases, try to enable arm64 image building
Committed-by: xiaolei.zl@alibaba-inc.com from Dev container

--- a/.github/workflows/build-graphscope-images-linux.yml
+++ b/.github/workflows/build-graphscope-images-linux.yml
@@ -20,6 +20,7 @@ on:
       - 'k8s/dockerfiles/interactive.Dockerfile'
       - 'k8s/dockerfiles/learning.Dockerfile'
       - 'k8s/dockerfiles/graphlearn-torch.Dockerfile'
+      - 'k8s/dockerfiles/flex-interactive.Dockerfile'
       - '.github/workflows/build-graphscope-images-linux.yml'
 
 concurrency:
@@ -63,6 +64,8 @@ jobs:
         df -h
         make graphlearn-torch CI=false VERSION=${SHORT_SHA}
         df -h
+        make flex-interactive CI=false VERSION=${SHORT_SHA} ENABLE_COORDINATOR=true
+        df -h
 
     - name: Release Nightly Image
       if: ${{ github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope' }}
@@ -76,7 +79,7 @@ jobs:
         # docker tag: 0.15.0 -> 0.15.0a20220808
         time=$(date "+%Y%m%d")
         version=$(cat ${GITHUB_WORKSPACE}/VERSION)
-        tag="${version}a${time}"
+        tag="${version}a${time}-${arch}"
 
         # graphscope image
         sudo docker tag graphscope/coordinator:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/coordinator:${tag}
@@ -103,6 +106,10 @@ jobs:
         sudo docker pull ${{ env.REGISTRY }}/graphscope/dataset:latest
         sudo docker tag ${{ env.REGISTRY }}/graphscope/dataset:latest ${{ env.REGISTRY }}/graphscope/dataset:${tag}
         sudo docker push ${{ env.REGISTRY }}/graphscope/dataset:${tag}
+
+        # flex-interactive image
+        sudo docker tag graphscope/flex-interactive:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/interactive:${tag}
+        sudo docker push ${{ env.REGISTRY }}/graphscope/interactive:${tag}
         
     - name: Extract Tag Name
       if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope' }}
@@ -119,7 +126,7 @@ jobs:
         # x86_64
         # arch=$(uname -m)
         # Release version tag
-        tag=${{ steps.tag.outputs.TAG }}
+        tag=${{ steps.tag.outputs.TAG }}-${arch}
         # graphscope image
         sudo docker tag graphscope/coordinator:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/coordinator:${tag}
         sudo docker tag graphscope/analytical:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/analytical:${tag}
@@ -145,8 +152,12 @@ jobs:
         sudo docker tag ${{ env.REGISTRY }}/graphscope/dataset:latest ${{ env.REGISTRY }}/graphscope/dataset:${tag}
         sudo docker push ${{ env.REGISTRY }}/graphscope/dataset:${tag}
 
+        # flex-interactive image
+        sudo docker tag graphscope/interactive:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/interactive:${tag}
+        sudo docker push ${{ env.REGISTRY }}/graphscope/interactive:${tag}
+
         # Release the latest tag
-        tag=latest
+        tag=latest-${arch}
         sudo docker tag graphscope/coordinator:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/coordinator:${tag}
         sudo docker tag graphscope/analytical:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/analytical:${tag}
         # skip build analytical-java
@@ -165,11 +176,75 @@ jobs:
         sudo docker push ${{ env.REGISTRY }}/graphscope/learning:${tag}
         sudo docker push ${{ env.REGISTRY }}/graphscope/graphlearn-torch:${tag}
 
+        # flex-interactive image
+        sudo docker tag graphscope/interactive:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/interactive:${tag}
+        sudo docker push ${{ env.REGISTRY }}/graphscope/interactive:${tag}
+
+    - name: Clean Nightly Image
+      if: ${{ github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope' }}
+      run: |
+        # x86_64
+        arch=$(uname -m)
+        # docker tag: 0.15.0 -> 0.15.0a20220808
+        time=$(date "+%Y%m%d")
+        version=$(cat ${GITHUB_WORKSPACE}/VERSION)
+        tag="${version}a${time}-${arch}"
+        # clean
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/coordinator:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/analytical:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/analytical-java:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive-frontend:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive-executor:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/learning:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive:${tag} || true
+        # sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/graphlearn-torch:${tag} || true
+        tag=${SHORT_SHA}
+        sudo docker rmi -f graphscope/coordinator:${tag} || true
+        sudo docker rmi -f graphscope/analytical:${tag} || true
+        sudo docker rmi -f graphscope/analytical-java:${tag} || true
+        sudo docker rmi -f graphscope/interactive-frontend:${tag} || true
+        sudo docker rmi -f graphscope/interactive-executor:${tag} || true
+        sudo docker rmi -f graphscope/learning:${tag} || true
+        # sudo docker rmi -f graphscope/graphlearn-torch:${tag} || true
+        sudo docker rmi -f graphscope/interactive:${tag} || true
+
+    - name: Clean Release Image
+      if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope' }}
+      run: |
+        # aarch64
+        arch=$(uname -m)
+        # Release version tag
+        tag=${{ steps.tag.outputs.TAG }}-${arch}
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/coordinator:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/analytical:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/analytical-java:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive-frontend:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive-executor:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/learning:${tag} || true
+        # sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/graphlearn-torch:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive:${tag} || true
+        tag=latest-${arch}
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/coordinator:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/analytical:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/analytical-java:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive-frontend:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive-executor:${tag} || true
+        sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/learning:${tag} || true
+        # sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/graphlearn-torch:${tag} || true
+        tag=${SHORT_SHA}
+        sudo docker rmi -f graphscope/coordinator:${tag} || true
+        sudo docker rmi -f graphscope/analytical:${tag} || true
+        sudo docker rmi -f graphscope/analytical-java:${tag} || true
+        sudo docker rmi -f graphscope/interactive-frontend:${tag} || true
+        sudo docker rmi -f graphscope/interactive-executor:${tag} || true
+        sudo docker rmi -f graphscope/learning:${tag} || true
+        # sudo docker rmi -f graphscope/graphlearn-torch:${tag} || true
+        sudo docker rmi -f graphscope/interactive:${tag} || true
 
   build-image-aarch64:
-    runs-on: [self-hosted, Linux, ARM64]
-    # if: (github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope') || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope') || (github.pull_request == 'pull_request') || (github.event_name == 'workflow_dispatch')
-    if: false
+    # runs-on: [self-hosted, Linux, ARM64]
+    runs-on: [Linux, ARM64]
+    if: (github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope') || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope') || (github.pull_request == 'pull_request') || (github.event_name == 'workflow_dispatch')
     steps:
       - uses: actions/checkout@v4
         with:
@@ -191,6 +266,7 @@ jobs:
           make interactive-executor CI=false VERSION=${SHORT_SHA}
           make learning CI=false VERSION=${SHORT_SHA}
           # make graphlearn-torch CI=false VERSION=${SHORT_SHA}
+          make flex-interactive CI=false VERSION=${SHORT_SHA} ENABLE_COORDINATOR=true
 
       - name: Release Nightly Image
         if: ${{ github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope' }}
@@ -225,6 +301,10 @@ jobs:
           sudo docker push ${{ env.REGISTRY }}/graphscope/interactive-executor:${tag}
           sudo docker push ${{ env.REGISTRY }}/graphscope/learning:${tag}
           # sudo docker push ${{ env.REGISTRY }}/graphscope/graphlearn-torch:${tag}
+
+          # flex-interactive image
+          sudo docker tag graphscope/interactive:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/interactive:${tag}
+          sudo docker push ${{ env.REGISTRY }}/graphscope/interactive:${tag}
   
       - name: Extract Tag Name
         if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope' }}
@@ -261,6 +341,10 @@ jobs:
           sudo docker push ${{ env.REGISTRY }}/graphscope/learning:${tag}
           # sudo docker push ${{ env.REGISTRY }}/graphscope/graphlearn-torch:${tag}
 
+          # flex-interactive image
+          sudo docker tag graphscope/interactive:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/interactive:${tag}
+          sudo docker push ${{ env.REGISTRY }}/graphscope/interactive:${tag}
+
           # Release the latest tag
           tag=latest-${arch}
           sudo docker tag graphscope/coordinator:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/coordinator:${tag}
@@ -281,6 +365,10 @@ jobs:
           sudo docker push ${{ env.REGISTRY }}/graphscope/learning:${tag}
           # sudo docker push ${{ env.REGISTRY }}/graphscope/graphlearn-torch:${tag}
 
+          # flex-interactive image
+          sudo docker tag graphscope/interactive:${SHORT_SHA} ${{ env.REGISTRY }}/graphscope/interactive:${tag}
+          sudo docker push ${{ env.REGISTRY }}/graphscope/interactive:${tag}
+
       - name: Clean Nightly Image
         if: ${{ github.ref == 'refs/heads/main' && github.repository == 'alibaba/GraphScope' }}
         run: |
@@ -297,6 +385,7 @@ jobs:
           sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive-frontend:${tag} || true
           sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive-executor:${tag} || true
           sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/learning:${tag} || true
+          sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive:${tag} || true
           # sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/graphlearn-torch:${tag} || true
           tag=${SHORT_SHA}
           sudo docker rmi -f graphscope/coordinator:${tag} || true
@@ -306,6 +395,7 @@ jobs:
           sudo docker rmi -f graphscope/interactive-executor:${tag} || true
           sudo docker rmi -f graphscope/learning:${tag} || true
           # sudo docker rmi -f graphscope/graphlearn-torch:${tag} || true
+          sudo docker rmi -f graphscope/interactive:${tag} || true
 
       - name: Clean Release Image
         if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository == 'alibaba/GraphScope' }}
@@ -329,6 +419,8 @@ jobs:
           sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive-executor:${tag} || true
           sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/learning:${tag} || true
           # sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/graphlearn-torch:${tag} || true
+          sudo docker rmi -f ${{ env.REGISTRY }}/graphscope/interactive:${tag} || true
+
           tag=${SHORT_SHA}
           sudo docker rmi -f graphscope/coordinator:${tag} || true
           sudo docker rmi -f graphscope/analytical:${tag} || true
@@ -337,6 +429,7 @@ jobs:
           sudo docker rmi -f graphscope/interactive-executor:${tag} || true
           sudo docker rmi -f graphscope/learning:${tag} || true
           # sudo docker rmi -f graphscope/graphlearn-torch:${tag} || true
+          sudo docker rmi -f graphscope/interactive:${tag} || true
 
 
   manifest-push-image:
